add husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint src --max-warnings=0",
+    "postinstall": "husky install",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "next lint src --max-warnings=0 --fix"
+    ]
   },
   "dependencies": {
     "next": "11.1.2",
@@ -24,7 +31,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.2",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
   }
