Add RTL config and first test

--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "start": "next start",
     "lint": "next lint src --max-warnings=0",
     "postinstall": "husky install",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch":"yarn test --watch"
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit":"lint-staged"
+    }
   },
   "lint-staged": {
     "src/**/*": [
-      "next lint src --max-warnings=0 --fix"
+      "next lint src --max-warnings=0 --fix",
+      "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
@@ -21,7 +29,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "@next/eslint-plugin-next": "^11.1.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
@@ -32,6 +44,7 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
+    "jest": "^27.1.0",
     "lint-staged": "^11.1.2",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
